Fixed scrollbar formatting nonsense

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 body {
-  overflow: hidden;
+  overflow-y: scroll;
   background: url(../images/background.jpg) no-repeat center fixed; 
   background-color: rgba(200, 201, 201, 0.25);
   -webkit-background-size: cover;
